--- a/projeto.html
+++ b/projeto.html
@@ -12,7 +12,7 @@
   <label for="Apenas com aulas práticas">Apenas com aulas práticas</label><br>
   <input type="radio" id="Com aulas práticas e teóricas" name="fav_language" value="Com aulas práticas e teóricas">
   <label for="Com aulas práticas e teóricas">Com aulas práticas e teóricas</label><br><br>
-  <input type="enviar" value="enviar">
+  <input type="submit" value="Submit">
 </form> 
 
 </body>
