--- a/tech.html
+++ b/tech.html
@@ -5,7 +5,7 @@
 
 <p>Selecione a opção que você acredita que meçhor se encaixa com seu aprendizado. <p>
 
-<form action="/action_page.php">
+<form action="/index.html">
   <label for="aulas">Selecione opção que mais se encaixa com seu aprendizado :</label>
   <select id="aulas" name="aulas" size="3" multiple>
     <option value="aulas longas">Aulas longas</option>
