--- a/projeto.html
+++ b/projeto.html
@@ -5,7 +5,7 @@
 <h2>Opções de Aulas</h2>
 
 <p>Com qual tipo de aula você consegue aprender melhor:</p>
-<form action="/action_page.php">
+<form action="/tech.html">
   <input type="radio" id="Apenas com aulas teóricas" name="fav_language" value="Apenas com aulas teóricas">
   <label for="Apenas com aulas teóricas">Apenas com aulas teóricas</label><br>
   <input type="radio" id="Apenas com aulas práticas" name="fav_language" value="Apenas com aulas práticas">
