--- a/tech.html
+++ b/tech.html
@@ -4,7 +4,7 @@
 
 <h2>Período das aulas</h2>
 
-<p>Selecione a opção que você acredita que meçhor se encaixa com seu aprendizado. <p>
+<p>Selecione a opção que você acredita que melhor se encaixa com seu aprendizado. <p>
 
 <form action="/index.html">
   <label for="aulas">Selecione opção que mais se encaixa com seu aprendizado :</label>
