--- a/talento.html
+++ b/talento.html
@@ -4,7 +4,7 @@
 
 <h2>Informações Iniciais</h2>
 
-<form action="index.html">
+<form action="projeto.html">
   <label for="fname">Nome:</label><br>
   <input type="text" id="fname" name="fname" value=""><br>
   <label for="lname">Sobrenome:</label><br>
