--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>Adicione seu nome e uma senha para que você possa ter acesso as novidades lançadas no site.</p>
 
-<form action="projeto.html">
+<form action="talento.html">
   <label for="fname">NOME:</label><br>
   <input type="text" id="fname" name="fname" size="50"><br>
   <label for="pin">PIN:</label><br>
