--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Seja Bem Vindo ao Projeto do Talento Tech!</h1>
+<h1>Seja Bem Vindo(a) ao Projeto do Talento Tech!</h1>
 
 <p>Adicione seu nome e uma senha para que você possa ter acesso as novidades lançadas no site.</p>
 
